Patch for issue #1649790 submitted by Ryan Bell to get more keys to work on Windows

--- a/src/main/resources/jline/keybindings.properties
+++ b/src/main/resources/jline/keybindings.properties
@@ -34,7 +34,7 @@
 # ENTER: newline
 13: NEWLINE
 
-# CTRL-L: clear screem
+# CTRL-L: clear screen
 12: CLEAR_SCREEN
 
 # CTRL-N: scroll to the next element in the history buffer
@@ -56,4 +56,4 @@
 23: DELETE_PREV_WORD
 
 # CTRL-?: delete the previous character
-127: DELETE_PREV_CHAR
+127: DELETE_NEXT_CHAR
