Linux console now interprets the System Property input.encoding and should now be able to read umlaute. The next thins would be to do so under windows.

--- a/src/main/resources/jline/keybindings.properties
+++ b/src/main/resources/jline/keybindings.properties
@@ -19,8 +19,8 @@
 # CTRL-E: move the cursor to the end of the line
 5: MOVE_TO_END
 
-# CTRL-H: delete the previous character
-8: DELETE_PREV_CHAR
+# DEL, CTRL-H: delete the previous character
+8: DELETE_NEXT_CHAR
 
 # TAB, CTRL-I: signal that console completion should be attempted
 9: COMPLETE
@@ -55,5 +55,5 @@
 # CTRL-W: delete the word directly before the cursor
 23: DELETE_PREV_WORD
 
-# CTRL-?: delete the previous character
+# BACKSPACE, CTRL-?: delete the previous character
 127: DELETE_PREV_CHAR
