Backspace now works an shell and x-term aswell

--- a/src/main/resources/jline/keybindings.properties
+++ b/src/main/resources/jline/keybindings.properties
@@ -19,8 +19,10 @@
 # CTRL-E: move the cursor to the end of the line
 5: MOVE_TO_END
 
-# DEL, CTRL-H: delete the previous character
-8: DELETE_NEXT_CHAR
+# BACKSPACE, CTRL-H: delete the previous character
+# 8 is the ASCII code for backspace and therefor
+# deleting the previous character
+8: DELETE_PREV_CHAR
 
 # TAB, CTRL-I: signal that console completion should be attempted
 9: COMPLETE
@@ -55,5 +57,6 @@
 # CTRL-W: delete the word directly before the cursor
 23: DELETE_PREV_WORD
 
-# BACKSPACE, CTRL-?: delete the previous character
-127: DELETE_PREV_CHAR
+# DELETE, CTRL-?: delete the previous character
+# 127 is the ASCII code for delete
+127: DELETE_NEXT_CHAR
