--- a/src/main/resources/jline/keybindings.properties
+++ b/src/main/resources/jline/keybindings.properties
@@ -59,4 +59,4 @@
 
 # DELETE, CTRL-?: delete the previous character
 # 127 is the ASCII code for delete
-127: DELETE_NEXT_CHAR
+127: DELETE_PREV_CHAR
