--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@ To make a bundle and request that ibilio upload it, do:
       <scope>test</scope>
     </dependency>
   </dependencies>
+
   <build>
     <plugins>
       <!--
@@ -117,6 +118,7 @@ To make a bundle and request that ibilio upload it, do:
       </plugin>
       -->
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <!-- <testFailureIgnore>true</testFailureIgnore> -->
@@ -125,6 +127,7 @@ To make a bundle and request that ibilio upload it, do:
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <source>1.3</source>
@@ -132,12 +135,14 @@ To make a bundle and request that ibilio upload it, do:
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
         <configuration>
           <stagingDirectory>../site-staging</stagingDirectory>
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
           <descriptors>
@@ -169,9 +174,11 @@ To make a bundle and request that ibilio upload it, do:
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
         <reportSets>
           <reportSet>
