--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>jline</groupId>
     <artifactId>jline</artifactId>
-    <name>JLine</name>
+    <name>JLine - ${project.version}</name>
     <version>2.0-SNAPSHOT</version>
 
     <properties>
