--- a/src/main/resources/jline/keybindings.properties
+++ b/src/main/resources/jline/keybindings.properties
@@ -1,62 +1,62 @@
 # Keybinding mapping for JLine. The format is:
-#    [key code]: [logical operation]
+#    [key code]=[logical operation]
 
 # CTRL-B: move to the previous character
-2: PREV_CHAR
+2=PREV_CHAR
 
 # CTRL-G: move to the previous word
-7: PREV_WORD
+7=PREV_WORD
 
 # CTRL-F: move to the next character
-6: NEXT_CHAR
+6=NEXT_CHAR
 
 # CTRL-A: move to the beginning of the line
-1: MOVE_TO_BEG
+1=MOVE_TO_BEG
 
 # CTRL-D: close out the input stream
-4: EXIT
+4=EXIT
 
 # CTRL-E: move the cursor to the end of the line
-5: MOVE_TO_END
+5=MOVE_TO_END
 
 # BACKSPACE, CTRL-H: delete the previous character
 # 8 is the ASCII code for backspace and therefor
 # deleting the previous character
-8: DELETE_PREV_CHAR
+8=DELETE_PREV_CHAR
 
 # TAB, CTRL-I: signal that console completion should be attempted
-9: COMPLETE
+9=COMPLETE
 
 # CTRL-J, CTRL-M: newline
-10: NEWLINE
+10=NEWLINE
 
 # CTRL-K: erase the current line
-11: KILL_LINE
+11=KILL_LINE
 
 # ENTER: newline
-13: NEWLINE
+13=NEWLINE
 
 # CTRL-L: clear screen
-12: CLEAR_SCREEN
+12=CLEAR_SCREEN
 
 # CTRL-N: scroll to the next element in the history buffer
-14: NEXT_HISTORY
+14=NEXT_HISTORY
 
 # CTRL-P: scroll to the previous element in the history buffer
-16: PREV_HISTORY
+16=PREV_HISTORY
 
 # CTRL-R: redraw the current line
-18: REDISPLAY
+18=REDISPLAY
 
 # CTRL-U: delete all the characters before the cursor position
-21: KILL_LINE_PREV
+21=KILL_LINE_PREV
 
 # CTRL-V: paste the contents of the clipboard (useful for Windows terminal)
-22: PASTE
+22=PASTE
 
 # CTRL-W: delete the word directly before the cursor
-23: DELETE_PREV_WORD
+23=DELETE_PREV_WORD
 
 # DELETE, CTRL-?: delete the previous character
 # 127 is the ASCII code for delete
-127: DELETE_PREV_CHAR
+127=DELETE_PREV_CHAR
