--- a/src/main/resources/jline/console/CandidateListCompletionHandler.properties
+++ b/src/main/resources/jline/console/CandidateListCompletionHandler.properties
@@ -1,4 +1,4 @@
-display-candidates=Display all {0} possibilities? (y or n)
+display-candidates=Display all %d possibilities? (y or n)
 display-candidates-yes=y
 display-candidates-no=n
 display-more=--More--
