Fix delete button on Ubuntu

--- a/src/main/resources/jline/keybindings.properties
+++ b/src/main/resources/jline/keybindings.properties
@@ -57,6 +57,6 @@
 # CTRL-W: delete the word directly before the cursor
 23=DELETE_PREV_WORD
 
-# DELETE, CTRL-?: delete the previous character
+# DELETE, CTRL-?: delete the next character
 # 127 is the ASCII code for delete
-127=DELETE_PREV_CHAR
+127=DELETE_NEXT_CHAR
