--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,15 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>jline</groupId>
+    <parent>
+        <groupId>org.sonatype.spice</groupId>
+        <artifactId>spice-parent</artifactId>
+        <version>13</version>
+    </parent>
+    
+    <groupId>org.sonatype.jline</groupId>
     <artifactId>jline</artifactId>
-    <name>JLine - ${project.version}</name>
+    <name>JLine</name>
     <version>2.0-SNAPSHOT</version>
 
     <properties>
