[maven-release-plugin] prepare release jline-2.2.1

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <groupId>org.sonatype.jline</groupId>
     <artifactId>jline</artifactId>
     <name>JLine</name>
-    <version>2.2-SNAPSHOT</version>
+    <version>2.2.1</version>
 
     <organization>
         <name>Sonatype</name>
