--- a/pom.xml
+++ b/pom.xml
@@ -53,26 +53,46 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jansi-version>1.3-SNAPSHOT</jansi-version>
     </properties>
 
     <repositories>
         <repository>
             <id>jansi</id>
-            <url>http://jansi.fusesource.org/repo/release</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
+            <url>http://jansi.fusesource.org/repo/snapshot</url>
             <releases>
-                <enabled>true</enabled>
+                <enabled>false</enabled>
             </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
     </repositories>
-
+    
     <dependencies>
+    
         <dependency>
             <groupId>org.fusesource.jansi</groupId>
             <artifactId>jansi</artifactId>
-            <version>1.2</version>
+            <version>${jansi-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fusesource.jansi</groupId>
+            <artifactId>jansi</artifactId>
+            <classifier>windows64</classifier>
+            <version>${jansi-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fusesource.jansi</groupId>
+            <artifactId>jansi</artifactId>
+            <classifier>windows32</classifier>
+            <version>${jansi-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fusesource.jansi</groupId>
+            <artifactId>jansi</artifactId>
+            <classifier>osx64</classifier>
+            <version>${jansi-version}</version>
         </dependency>
 
         <dependency>
@@ -196,6 +216,24 @@
                 <artifactId>maven-scm-plugin</artifactId>
                 <version>1.2</version>
             </plugin>
+            
+            <!-- include all the dependencies into the jar so it can run standalone -->
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-shade-plugin</artifactId>
+              <version>1.3</version>
+              <executions>
+                <execution>
+                  <phase>package</phase>
+                  <goals>
+                    <goal>shade</goal>
+                  </goals>
+                  <configuration>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+                  
         </plugins>
     </build>
 
