--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
         <dependency>
             <groupId>org.fusesource.jansi</groupId>
             <artifactId>jansi</artifactId>
-            <classifier>osx64</classifier>
+            <classifier>osx</classifier>
             <version>${jansi-version}</version>
         </dependency>
 
