Jansi is now included in jline explicitly, don't need to depend on it. Split off the customizations from the assembly into gshell-personality

--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,10 @@
                                         <exclude>junit/**</exclude>
                                         <exclude>org/junit/**</exclude>
                                         <exclude>org/hamcrest/**</exclude>
+                                        <exclude>org/fusesource/hawtjni/runtime/Jni*</exclude>
+                                        <exclude>org/fusesource/hawtjni/runtime/*Flag*</exclude>
+                                        <exclude>org/fusesource/hawtjni/runtime/T32*</exclude>
+                                        <exclude>org/fusesource/hawtjni/runtime/NativeStats*</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
