Update gossip versions, drop jansi repo, mark main jline jansi dep as normal, causing idea problems

--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
             <groupId>org.fusesource.jansi</groupId>
             <artifactId>jansi</artifactId>
             <version>${jansi-version}</version>
-            <scope>provided</scope>
+            <!--<scope>provided</scope>-->
         </dependency>
 
         <dependency>
