--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <groupId>org.sonatype.jline</groupId>
     <artifactId>jline</artifactId>
     <name>JLine</name>
-    <version>2.3</version>
+    <version>2.4-SNAPSHOT</version>
 
     <organization>
         <name>Sonatype</name>
