--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jansi-version>1.3-SNAPSHOT</jansi-version>
     </properties>
-
+    
+    <!--
     <repositories>
         <repository>
             <id>jansi</id>
@@ -67,12 +67,13 @@
             </snapshots>
         </repository>
     </repositories>
-
+    -->
+    
     <dependencies>
         <dependency>
             <groupId>org.fusesource.jansi</groupId>
             <artifactId>jansi</artifactId>
-            <version>${jansi-version}</version>
+            <version>1.3</version>
             <!--<scope>provided</scope>-->
         </dependency>
 
@@ -80,7 +81,7 @@
             <groupId>org.fusesource.jansi</groupId>
             <artifactId>jansi</artifactId>
             <classifier>windows64</classifier>
-            <version>${jansi-version}</version>
+            <version>1.3</version>
             <scope>provided</scope>
         </dependency>
 
@@ -88,7 +89,7 @@
             <groupId>org.fusesource.jansi</groupId>
             <artifactId>jansi</artifactId>
             <classifier>windows32</classifier>
-            <version>${jansi-version}</version>
+            <version>1.3</version>
             <scope>provided</scope>
         </dependency>
 
@@ -96,7 +97,7 @@
             <groupId>org.fusesource.jansi</groupId>
             <artifactId>jansi</artifactId>
             <classifier>osx</classifier>
-            <version>${jansi-version}</version>
+            <version>1.3</version>
             <scope>provided</scope>
         </dependency>
 
