adding basic search backwards capabilities
CTRL-R now maps to the reverse-i-search as known from readline.

Still not perfect, though:

- not possible to leave mode through ESC or CTRL-G because the
  terminal is not really in raw mode, as it seems.
- Hitting CTRL-R twice does not lead to the last search term
  being used (bug?)

--- a/src/main/resources/jline/keybindings.properties
+++ b/src/main/resources/jline/keybindings.properties
@@ -1,23 +1,23 @@
 # Keybinding mapping for JLine. The format is:
 #    [key code]=[logical operation]
 
-# CTRL-B: move to the previous character
-2=PREV_CHAR
-
-# CTRL-G: move to the previous word
-7=PREV_WORD
-
-# CTRL-F: move to the next character
-6=NEXT_CHAR
-
 # CTRL-A: move to the beginning of the line
 1=MOVE_TO_BEG
+
+# CTRL-B: move to the previous character
+2=PREV_CHAR
 
 # CTRL-D: close out the input stream
 4=EXIT
 
 # CTRL-E: move the cursor to the end of the line
 5=MOVE_TO_END
+
+# CTRL-F: move to the next character
+6=NEXT_CHAR
+
+# CTRL-G: abort
+7=ABORT
 
 # BACKSPACE, CTRL-H: delete the previous character
 # 8 is the ASCII code for backspace and therefor
@@ -33,20 +33,23 @@
 # CTRL-K: erase the current line
 11=KILL_LINE
 
-# ENTER: newline
-13=NEWLINE
-
 # CTRL-L: clear screen
 12=CLEAR_SCREEN
 
+# ENTER: newline
+13=NEWLINE
+
 # CTRL-N: scroll to the next element in the history buffer
 14=NEXT_HISTORY
+
+# CTRL-O: move to the previous word
+15=PREV_WORD
 
 # CTRL-P: scroll to the previous element in the history buffer
 16=PREV_HISTORY
 
 # CTRL-R: redraw the current line
-18=REDISPLAY
+18=SEARCH_PREV
 
 # CTRL-U: delete all the characters before the cursor position
 21=KILL_LINE_PREV
