--- a/src/main/resources/jline/windowsbindings.properties
+++ b/src/main/resources/jline/windowsbindings.properties
@@ -1,26 +1,26 @@
 # Keybinding mapping for JLine. The format is:
 #    [key code]=[logical operation]
 
+# CTRL-A: move to the beginning of the line
+1=MOVE_TO_BEG
+
 # CTRL-B: move to the previous character
 2=PREV_CHAR
 
 # CTRL-C: toggle overtype mode (frankly, I wasn't sure where to bind this)
 3=INSERT
 
-# CTRL-G: move to the previous word
-7=PREV_WORD
-
-# CTRL-F: move to the next character
-6=NEXT_CHAR
-
-# CTRL-A: move to the beginning of the line
-1=MOVE_TO_BEG
-
 # CTRL-D: close out the input stream
 4=EXIT
 
 # CTRL-E: move the cursor to the end of the line
 5=MOVE_TO_END
+
+# CTRL-F: move to the next character
+6=NEXT_CHAR
+
+# CTRL-G: move to the previous word
+7=ABORT
 
 # CTRL-H: delete the previous character
 8=DELETE_PREV_CHAR
@@ -34,20 +34,23 @@
 # CTRL-K: Vertical tab - on windows we'll move to the start of the history
 11=START_OF_HISTORY
 
-# ENTER: newline
-13=NEWLINE
-
 # CTRL-L: Form feed - on windows, we'll move to the end of the history
 12=END_OF_HISTORY
+
+# ENTER: newline
+13=NEWLINE
 
 # CTRL-N: scroll to the next element in the history buffer
 14=NEXT_HISTORY
 
+# CTRL-O: move to the previous word
+15=PREV_WORD
+
 # CTRL-P: scroll to the previous element in the history buffer
 16=PREV_HISTORY
 
-# CTRL-R: redraw the current line
-18=REDISPLAY
+# CTRL-R: search backwards in history
+18=SEARCH_PREV
 
 # CTRL-U: delete all the characters before the cursor position
 21=KILL_LINE_PREV
