Fix completion messages loading

--- a/src/main/resources/jline/console/completer/CandidateListCompletionHandler.properties
+++ b/src/main/resources/jline/console/completer/CandidateListCompletionHandler.properties
@@ -1,4 +1,4 @@
-display-candidates=Display all %d possibilities? (y or n)
-display-candidates-yes=y
-display-candidates-no=n
-display-more=--More--
+DISPLAY_CANDIDATES=Display all %d possibilities? (y or n)
+DISPLAY_CANDIDATES_YES=y
+DISPLAY_CANDIDATES_NO=n
+DISPLAY_MORE=--More--
