For Windows, remap CTRL-L to CLEAR_SCREEN, CRTL-K to KILL_LINE (similar to Unix keybindings. Also remap CTLR-S to END_OF_HISTORY (formerly CTRL-L).

--- a/src/main/resources/jline/windowsbindings.properties
+++ b/src/main/resources/jline/windowsbindings.properties
@@ -31,11 +31,11 @@
 # CTRL-J, CTRL-M: newline
 10=NEWLINE
 
-# CTRL-K: Vertical tab - on windows we'll move to the start of the history
-11=START_OF_HISTORY
+# CTRL-K: erase the current line
+11=KILL_LINE
 
-# CTRL-L: Form feed - on windows, we'll move to the end of the history
-12=END_OF_HISTORY
+# CTRL-L: clear screen
+12=CLEAR_SCREEN
 
 # ENTER: newline
 13=NEWLINE
@@ -51,6 +51,9 @@
 
 # CTRL-R: search backwards in history
 18=SEARCH_PREV
+
+# CTRL-S: Move to the end of the history
+19=END_OF_HISTORY
 
 # CTRL-U: delete all the characters before the cursor position
 21=KILL_LINE_PREV
