--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,14 @@
                 <role>Developer</role>
             </roles>
         </developer>
+        <developer>
+            <id>gnodet</id>
+            <name>Guillaume Nodet</name>
+            <email>gnodet@gmail.com</email>
+            <roles>
+                <role>Developer</role>
+            </roles>
+        </developer>
     </developers>
 
     <properties>
