--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <groupId>jline</groupId>
     <artifactId>jline</artifactId>
     <name>JLine</name>
-    <version>2.6</version>
+    <version>2.7-SNAPSHOT</version>
 
     <licenses>
         <license>
